<resources>
    <string name="app_name">cmd_app_android</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_splash">splash</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="cmd_logo">cmd logo</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="first_name">Firstname</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Lastname</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_verification">Email Verification</string>
    <string name="please_wait">Please wait…</string>
    <string name="email_verification_text">A one time passcode was sent to your email, please check your email or the spam directory of the email for the one time passcode sent to you. Please do not share this with anyone</string>
    <string name="change_email">Change Email?</string>
    <string name="verify">Verify</string>
    <string name="otp">OTP</string>
    <string name="create_password">Create Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="continue_text">Continue</string>
    <string name="resend">Resend</string>
    <string name="didn_t_receive_otp">Didn\'t receive otp?</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="my_account">My Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log out</string>
    <string name="my_account_settings">My Account Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="password_settings">Password Settings</string>
    <string name="update_account">Update Account</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete Account</string>
</resources>