<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cmd.cmd_app_android.view.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cmd.cmd_app_android.view.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cmd.cmd_app_android.view.fragments.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.cmd.cmd_app_android.view.fragments.accounts.AccountFragment"
        android:label="Account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_navigation_account_to_profileSettingsFragment"
            app:destination="@id/profileSettingsFragment" />
    </fragment>
    <dialog
        android:id="@+id/profileSettingsFragment"
        android:name="com.cmd.cmd_app_android.view.fragments.accounts.ProfileSettingsFragment"
        android:label="ProfileSettingsFragment" >
        <argument
            android:name="user"
            app:argType="com.cmd.cmd_app_android.data.models.UserDTO" />
    </dialog>
</navigation>