<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_black"
    android:paddingHorizontal="25dp">

    <ImageView
        android:contentDescription="@string/cmd_logo"
        android:layout_width="139dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_cmd"
        android:layout_marginTop="25dp"
        android:id="@+id/cmd_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_verify_header"
        app:layout_constraintTop_toBottomOf="@id/cmd_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/email_verification"
        android:fontFamily="@font/poppins_bold"
        android:textSize="30sp"
        android:textColor="@color/text_white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_verify_header"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:id="@+id/otp_section"
        android:layout_marginTop="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:textSize="18sp"
            android:text="@string/otp"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/otp_label"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text_field"
            android:padding="10dp"
            android:inputType="number"
            android:textColor="@color/brand_black"
            android:id="@+id/otp_text_field"
            android:hint="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/otp_section"
        android:id="@+id/verification_text"
        android:background="@drawable/background_auth_button_loading"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_verification_text"
            android:fontFamily="@font/poppins_light"
            android:textSize="15sp"
            android:textColor="@color/text_white"
            android:text="@string/email_verification_text"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:id="@+id/otp_error_layout"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/otp_error"
                android:textColor="@color/text_white"
                android:text="@string/didn_t_receive_otp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/bottom_section"
                android:background="@drawable/background_auth_button"
                android:paddingVertical="6dp"
                android:paddingHorizontal="19dp"
                android:id="@+id/resend_button">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend"
                    android:textColor="@color/text_white"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="16sp"
                    android:visibility="visible"
                    android:id="@+id/resend_button_text"
                    android:layout_centerInParent="true"/>

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:indeterminate="true"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@color/brand_yellow"
                    android:id="@+id/resend_progress"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bottom_section"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brand_yellow"
            android:textSize="16sp"
            android:text="@string/change_email"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/change_email_text" />



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottom_section"
        android:background="@drawable/background_auth_button"
        android:layout_marginBottom="30dp"
        android:padding="8dp"
        android:id="@+id/verify_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textColor="@color/text_white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:visibility="visible"
            android:id="@+id/verify_button_text"
            android:layout_centerInParent="true"/>

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/brand_yellow"
            android:id="@+id/progressBar"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>