<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/brand_black"
    android:paddingHorizontal="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/cmd_logo"
        android:layout_width="139dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_cmd"
        android:layout_marginTop="25dp"
        android:id="@+id/cmd_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_create_password_header"
        app:layout_constraintTop_toBottomOf="@id/cmd_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/create_password"
        android:fontFamily="@font/poppins_bold"
        android:textSize="30sp"
        android:textColor="@color/text_white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_create_password_header"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:id="@+id/new_password_section"
        android:layout_marginTop="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:textSize="18sp"
            android:text="@string/new_password"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/new_password_label"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text_field"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColor="@color/text_white"
            android:id="@+id/password_text_field"
            android:hint="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_password_error"
            android:textColor="@color/error_red"
            tools:text="Name is not valid"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_password_section"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:id="@+id/password_section"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:textSize="18sp"
            android:text="@string/retype_new_password"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/confirm_new_password_label"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text_field"
            android:padding="10dp"
            android:textColor="@color/brand_black"
            android:inputType="textPassword"
            android:id="@+id/confirm_new_password_text_field"
            android:hint="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_new_password_error"
            android:textColor="@color/error_red"
            tools:text="Name is not valid"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_auth_button"
        android:layout_marginBottom="30dp"
        android:padding="8dp"
        android:id="@+id/button_continue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_text"
            android:textColor="@color/text_white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:visibility="visible"
            android:id="@+id/continue_button_text"
            android:layout_centerInParent="true"/>

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/brand_yellow"
            android:id="@+id/progressBar"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>